# SensorFusion

./: CMakeLists.txt  EigenCeresJetNumTraits.h  LocalParamSe3.h  SE3.h  SensorFusionCeres.cpp  SensorFusionCeres.h  SensorFusionConfig.cmake.in  SensorFusionVo.cpp  SensorFusionVo.h
Matlab/: generateData.m  global_poses.csv  ground_truth.csv  ground_truth_vels.csv  imu_data.csv
Utils/: SE3.h
include/SensorFusion/: CostFunctions.h  SensorFusionCeres.h  SensorFusionVo.h  Utils.h
